--- a/package.json
+++ b/package.json
@@ -1,20 +1,25 @@
 {
-  "name": "my-app",
-  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
-    "next": "12.1.6",
-    "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "@headlessui/react": "^1.4.0",
+    "@heroicons/react": "^1.0.4",
+    "axios": "^0.25.0",
+    "next": "^11.1.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "sass": "^1.38.2",
+    "shopify-buy": "^2.15.1",
+    "swiper": "^6.7.5",
+    "swr": "^1.2.0"
   },
   "devDependencies": {
-    "eslint": "8.16.0",
-    "eslint-config-next": "12.1.6"
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^2.2.19"
   }
 }
