--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@headlessui/react": "^1.4.0",
     "@heroicons/react": "^1.0.4",
     "axios": "^0.25.0",
+    "context": "^2.0.6",
     "next": "^11.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
