--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "@headlessui/react": "^1.4.0",
     "@heroicons/react": "^1.0.4",
     "axios": "^0.25.0",
-    "context": "^2.0.6",
     "next": "^11.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -20,6 +19,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
+    "eslint": "^8.16.0",
     "postcss": "^8.4.14",
     "tailwindcss": "^2.2.19"
   }
