--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "dependencies": {
     "@headlessui/react": "^1.4.0",
     "@heroicons/react": "^1.0.4",
+    "@tailwindcss/aspect-ratio": "^0.4.0",
     "axios": "^0.25.0",
+    "framer-motion": "^6.3.6",
     "next": "12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
