added sanity studio

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
-    SHOPIFY_STORE_DOMAIN='mammothlinks.myshopify.com'
-    SHOPIFY_STOREFRONT_ACCESSTOKEN='e395064415d46c69bfef22afe6099f4b'
+SHOPIFY_STORE_DOMAIN = 'mammothlinks.myshopify.com'
+SHOPIFY_STOREFRONT_ACCESSTOKEN = 'e395064415d46c69bfef22afe6099f4b'
+
+SANITY_STUDIO_API_PROJECT_ID = 'iravytgr'
+SANITY_STUDIO_API_DATASET = 'production'
