--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@headlessui/react": "^1.4.0",
     "@heroicons/react": "^1.0.4",
     "@portabletext/react": "^1.0.6",
+    "@sanity/block-content-to-react": "^3.0.0",
     "@sanity/client": "^3.3.1",
     "@sanity/image-url": "^1.0.1",
     "@tailwindcss/aspect-ratio": "^0.4.0",
